[project]
name = "atollas"
version = "0.0.1"
description = "Add your description here"
dependencies = [
    "pandas>=2",
    "pyarrow>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.rye]
managed = true
dev-dependencies = [
    "ipdb>=0.13.13",
]

