[project]
name = "atollas"
version = "0.0.3"
description = "Add your description here"
dependencies = [
    "pandas>=2",
    "pyarrow>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.rye]
managed = true
dev-dependencies = [
    "ipdb>=0.13.13",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.27",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.5",
]

